All in script block

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ cache:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
 
-after_success:
-- "./gradlew bintrayUpload"
+script:
+- "./gradlew check assemble bintrayUpload"
