--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.bintray'
 
 group = 'com.healthpartners.jenkins'
-version = '0.1.0-SNAPSHOT'
+version = '0.1.0'
 
 repositories {
 	mavenCentral()
