--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ apply plugin:'groovy'
 apply plugin: 'maven'
 apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.bintray'
+apply plugin: 'jacoco'
 
 group = 'com.healthpartners.jenkins'
 version = '0.1.0'
@@ -39,6 +40,17 @@ dependencies {
     compile "org.codehaus.groovy:groovy:$groovyVersion"
     compile "org.spockframework:spock-core:1.1-groovy-2.4"
 }
+
+jacocoTestReport {
+    reports {
+        xml.enabled true 
+        csv.enabled false
+        html.enabled false
+    }
+}
+
+build.dependsOn jacocoTestReport
+
 
 task wrapper(type:Wrapper) {
     gradleVersion = '4.6'
